# Quill

./: .gitignore  LICENSE  README.md  io.github.khedron83.Quill.desktop  io.github.khedron83.Quill.metainfo.xml  io.github.khedron83.Quill.yml  pyproject.toml  python3-deps.json  requirements.txt
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/khedron/quill/: MainActivity.kt  QuillApp.kt
android/app/src/main/java/com/khedron/quill/data/caldav/: CalDAVClient.kt
android/app/src/main/java/com/khedron/quill/data/preferences/: PreferencesDataStore.kt
android/app/src/main/java/com/khedron/quill/di/: AppModule.kt
android/app/src/main/java/com/khedron/quill/domain/model/: Models.kt
android/app/src/main/java/com/khedron/quill/ui/: NavGraph.kt
android/app/src/main/java/com/khedron/quill/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/java/com/khedron/quill/ui/tasks/: TasksScreen.kt  TasksViewModel.kt
android/app/src/main/java/com/khedron/quill/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
desktop/: main.py  quill.spec
desktop/src/core/: caldav_client.py  config.py
desktop/src/ui/: main_window.py
